tests/typechecking/invalid/let_rec_mismatch.ml
let rec f x = x + 1 in
let y = f 2. in ()
